# wgpu-tutorial-rs

./: Cargo.toml  README.md  build.rs
assets/shaders/: cube.wgsl  shader.wgsl  shader_image.wgsl
example/: cube.rs  custom-texture.rs  imgui-image-file.rs  imgui-texel-image-2.rs  imgui-texel-image-b.rs  imgui-texel-image.rs  triangle.rs
example/imgui-model/: main.rs  shader.wgsl
example/mipmap/: main.rs
example/raytracing/: main.rs  non_uniform_indexing_0.wgsl
example/texture-array/: main.rs
src/: app.rs  camera.rs  command_buffer.rs  framework.rs  gpu.rs  imgui_stuff.rs  layer.rs  layer_renderer.rs  lib.rs  main.rs  model.rs  resource.rs  shader.rs  share.rs  state.rs  swapchain.rs  texture.rs  window.rs
src/imgui_layer/: mod.rs
tests/common/: image.rs
