[package]
name = "wgpu-tutorial-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.0"
winit = "0.27.5"
imgui = "0.10"
imgui-wgpu = "0.22"
imgui-winit-support = "0.10"
cfg-if = "1"
pollster = "0.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# console_log = "0.2.0"
# wgpu = { version = "0.15", features = ["webgl"]}
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4.30"
# web-sys = { version = "0.3", features = [
#     "Document",
#     "Window",
#     "Element",
# ]}
