[package]
name = "wgpu-tutorial-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.0"
winit = "0.27.5"
imgui = "0.10"
imgui-wgpu = "0.22"
imgui-winit-support = "0.10"
cfg-if = "1"
pollster = "0.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
glam = "0.21.3"

tobj = { version = "3.2.1", features = [
    "async",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.png]
version = "0.17.8"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# console_log = "0.2.0"
# wgpu = { version = "0.15", features = ["webgl"]}
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4.30"
# web-sys = { version = "0.3", features = [
#     "Document",
#     "Window",
#     "Element",
# ]}
[[bin]]
name = "triangle"
path = "example/triangle.rs"

[[bin]]
name = "cube"
path = "example/cube.rs"

[[bin]]
name = "custom-texture"
path = "example/custom-texture.rs"

[[bin]]
name = "imgui-image"
path = "example/imgui-image-file.rs"

[[bin]]
name = "imgui-cube"
path = "example/imgui-texel-image.rs"

[[bin]]
name = "imgui-model"
path = "example/imgui-model/main.rs"

[[bin]]
name = "texture-array"
path = "example/texture-array/main.rs"

[[bin]]
name = "mipmap"
path = "example/mipmap/main.rs"

[[bin]]
name = "raytracing"
path = "example/raytracing/main.rs"

